Adicionando arquivos de template pras views.

--- a/ConsertoPraVoce/Views/Web.config
+++ b/ConsertoPraVoce/Views/Web.config
@@ -21,7 +21,13 @@
       </namespaces>
     </pages>
   </system.web.webPages.razor>
-
+	<location path="~/Content/js">
+		<system.web>
+			<authorization>
+				<allow users="*"/>
+			</authorization>
+		</system.web>
+	</location>
   <appSettings>
     <add key="webpages:Enabled" value="false" />
   </appSettings>
