--- a/ConsertoPraVoce.Model/ConsertoPraVoce.Model.csproj
+++ b/ConsertoPraVoce.Model/ConsertoPraVoce.Model.csproj
@@ -51,8 +51,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Brand.cs">
+      <DependentUpon>CPVC.tt</DependentUpon>
+    </Compile>
     <Compile Include="Class1.cs" />
-    <Compile Include="Cliente.cs">
+    <Compile Include="Client.cs">
       <DependentUpon>CPVC.tt</DependentUpon>
     </Compile>
     <Compile Include="CPVC.Context.cs">
@@ -70,17 +73,29 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>CPVC.edmx</DependentUpon>
     </Compile>
-    <Compile Include="Marca.cs">
+    <Compile Include="DeviceType.cs">
       <DependentUpon>CPVC.tt</DependentUpon>
     </Compile>
-    <Compile Include="MeioPagamento.cs">
+    <Compile Include="PaymentMethod.cs">
       <DependentUpon>CPVC.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Servicos.cs">
+    <Compile Include="Service.cs">
       <DependentUpon>CPVC.tt</DependentUpon>
     </Compile>
-    <Compile Include="TipoAparelho.cs">
+    <Compile Include="ServicePrice.cs">
+      <DependentUpon>CPVC.tt</DependentUpon>
+    </Compile>
+    <Compile Include="sp_helpdiagramdefinition_Result.cs">
+      <DependentUpon>CPVC.tt</DependentUpon>
+    </Compile>
+    <Compile Include="sp_helpdiagrams_Result.cs">
+      <DependentUpon>CPVC.tt</DependentUpon>
+    </Compile>
+    <Compile Include="sysdiagram.cs">
+      <DependentUpon>CPVC.tt</DependentUpon>
+    </Compile>
+    <Compile Include="User.cs">
       <DependentUpon>CPVC.tt</DependentUpon>
     </Compile>
   </ItemGroup>
