--- a/ConsertoPraVoce.Model/App.Config
+++ b/ConsertoPraVoce.Model/App.Config
@@ -4,9 +4,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <connectionStrings>
-    <add name="CPVCEntities" connectionString="metadata=res://*/CPVC.csdl|res://*/CPVC.ssdl|res://*/CPVC.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LOCALHOST\SQLEXPRESS;initial catalog=CPVC;persist security info=True;user id=sa;password=cdccard;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <connectionStrings><add name="CPVCEntities" connectionString="metadata=res://*/CPVC.csdl|res://*/CPVC.ssdl|res://*/CPVC.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LOCALHOST\SQLEXPRESS;initial catalog=CPVC;persist security info=True;user id=sa;password=cdccard;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
