--- a/ConsertoPraVoce.Regras/ConsertoPraVoce.Regras.csproj
+++ b/ConsertoPraVoce.Regras/ConsertoPraVoce.Regras.csproj
@@ -56,7 +56,7 @@
     <Compile Include="Mappings\FornecedorMap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Regras\Fornecedor.cs" />
-    <Compile Include="Regras\OrdemCompra.cs" />
+    <Compile Include="Regras\OrdemCompraRegras.cs" />
     <Compile Include="Regras\TransacaoRegras.cs" />
   </ItemGroup>
   <ItemGroup>
