--- a/ConsertoPraVoce.Regras/ConsertoPraVoce.Regras.csproj
+++ b/ConsertoPraVoce.Regras/ConsertoPraVoce.Regras.csproj
@@ -55,9 +55,11 @@
     <Compile Include="Interfaces\IRepository.cs" />
     <Compile Include="Mappings\FornecedorMap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Regras\EstoqueProdutoRegras.cs" />
     <Compile Include="Regras\Fornecedor.cs" />
     <Compile Include="Regras\OrdemCompraRegras.cs" />
     <Compile Include="Regras\TransacaoRegras.cs" />
+    <Compile Include="ViewModel\CriarOrdemDeCompraVM.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
