--- a/ConsertoPraVoce.Model/ConsertoPraVoce.Model.csproj
+++ b/ConsertoPraVoce.Model/ConsertoPraVoce.Model.csproj
@@ -164,6 +164,9 @@
     <Compile Include="sp_helpdiagrams_Result.cs">
       <DependentUpon>CPVC.tt</DependentUpon>
     </Compile>
+    <Compile Include="Tarefas.cs">
+      <DependentUpon>CPVC.tt</DependentUpon>
+    </Compile>
     <Compile Include="TipoAparelho.cs">
       <DependentUpon>CPVC.tt</DependentUpon>
     </Compile>
